# onde_dirigi

./: README  meson.build
src/: char_line.h  db.c  db.h  debug_video.c  definitions.h  glyph.c  glyph.h  ls.c  ls.h  output_data.c  output_data.h  parse_directory.c  video_data.c  video_data.h
test/: char_line_fill.h  glyph_test.c  ls_test.c  meson.build  my_assert.h  output_data_test.c  video_data_test.c
test/data/: directory.sqlite
test/data/private.template/: header.h
